fix scrollbars in bigscreen mode

--- a/static/web/css/bigscreen.css
+++ b/static/web/css/bigscreen.css
@@ -74,7 +74,7 @@ cursor: pointer;
 }
 body#bigscreen #twitch-stream-wrap > div {
 margin:0 0 0 400px;	
-padding:10px 0 10px 10px;
+padding:10px 0 5px 10px;
 overflow: hidden;
 }
 body#bigscreen #twitch-stream-wrap object {
